@@ -5,6 +5,10 @@
 	<artifactId>weibo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+
+	<properties>  
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+  </properties>  
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -14,13 +18,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.jexcelapi</groupId>
-			<artifactId>jxl</artifactId>
-			<version>2.6.12</version>
+			<version>LATEST</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -71,8 +69,28 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+					
 				</configuration>
 			</plugin>
+			
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
+                    <argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
+                    <forkMode>never</forkMode>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <!--定义maven运行测试生成的报表路径 -->
+                    <reportsDirectory>./result/test-report</reportsDirectory>
+                </configuration>
+            </plugin>
+			
 		</plugins>
 	</build>
 </project>
